# gmail-mcp-server

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  example.env  get_refresh_token.py  google_client.py  pyproject.toml  requirements.txt  server.py  smithery.yaml
