[project]
name = "gmail-mcp-server"
version = "0.1.0"
description = "Provides tools for common operations with gmail (e.g., send_mail)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]",
    "google-auth",
    "google-auth-oauthlib",
    "google-auth-httplib2",
    "google-api-python-client",
]
